# openclaw

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IDENTITY.md  LICENSE  README-PRODUCTION.md  README.md  SECURITY.md  SOUL.md  __init__.py  docker-compose.yml  fix_manifest.json  gateway.py  pyproject.toml  requirements.txt  telemetry.py  test_stub.py
.planning/: PROJECT.md  ROADMAP.md  STATE.md
approvals/: api.py
astro-portfolio/: index.html
blog/: 2025-03-29-gsd-built-ai-agent-framework.md
config/: permissions.yaml  settings.py
core/: orchestrator.py
projects/auto-sme/: .env.example  DEPLOYMENT.md  Dockerfile  PILOT.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml
projects/auto-sme/.planning/: PROJECT.md  ROADMAP.md  STATE.md
projects/auto-sme/.planning/plans/: 01-01-design-api.md  01-02-build-backend.md  01-03-whatsapp-integration.md  01-04-deploy-pilot.md
projects/auto-sme/src/auto_sme/: __init__.py  cli.py  dependencies.py  main.py
projects/auto-sme/src/auto_sme/api/: openapi.yaml
projects/auto-sme/src/auto_sme/routers/: inventory.py  orders.py  reports.py  tasks.py
projects/auto-sme/tests/: test_api.py
projects/open-audit/: README.md  pyproject.toml  rules.yaml
projects/open-audit/.planning/: PROJECT.md  ROADMAP.md  STATE.md
projects/open-audit/.planning/plans/: 01-01-define-rules.md  01-02-scanner-cli.md  01-03-reports.md  01-04-publish-docs.md
projects/open-audit/src/openaudit/: __init__.py  cli.py  report.py  scanner.py
projects/open-audit/tests/: test_scanner.py
state/: models.py
(+94 files in other folders)
