[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-sme"
version = "0.1.0"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "twilio>=9.0",
    "pytest>=7.0",
    "reportlab>=4.0",
]

[project.scripts]
auto-sme = "auto_sme.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
